<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
                name="user_arg"
                type="com.pertamina.absensiapplication.model.User"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="#F1EFF1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.DetailUserFragment">
        <TextView
                android:layout_width="wrap_content"
                android:text="Detail User"
                android:fontFamily="@font/leelawdb"
                android:textSize="30sp"
                android:layout_marginLeft="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:layout_height="wrap_content"/>
        <com.google.android.material.card.MaterialCardView
                android:id="@+id/profile_image_card"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView
                    android:scaleType="fitXY"
                    app:imageUrl="@{user_arg.profileImage}"
                    android:contentDescription="@string/user_image"
                    android:layout_width="90dp"
                    android:layout_height="120dp"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:id="@+id/user_name"
                app:layout_constraintTop_toTopOf="@+id/profile_image_card"
                app:layout_constraintStart_toEndOf="@+id/profile_image_card"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{user_arg.name}"
                tools:text="@tools:sample/first_names"
                android:fontFamily="@font/leelawdb"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/user_status"
                app:layout_constraintTop_toBottomOf="@+id/user_name"
                app:layout_constraintStart_toStartOf="@+id/user_name"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/leelawdb"
                android:textSize="14sp"
                android:text="@string/member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <com.google.android.material.card.MaterialCardView
                app:layout_constraintTop_toBottomOf="@+id/profile_image_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="30dp"
                app:cardElevation="10dp"
                app:shapeAppearanceOverlay="@style/MaterialCardView.TopRounded"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/employee_number"
                        android:text="@string/no_pekerja"
                        android:textSize="14sp"
                        android:fontFamily="@font/leelawdb"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/value_employee_number"
                        tools:text="@string/no_pekerja"
                        android:text="@{user_arg.employeeNumber}"
                        android:textSize="12sp"
                        android:fontFamily="@font/leelawdb"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/employee_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/employee_position"
                        android:text="@string/posisi"
                        android:fontFamily="@font/leelawdb"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@id/employee_number"
                        app:layout_constraintTop_toBottomOf="@id/employee_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/value_employee_position"
                        tools:text="@string/posisi"
                        android:text="@{user_arg.position}"
                        android:textSize="12sp"
                        android:fontFamily="@font/leelawdb"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/employee_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/leave_balance"
                        android:text="@string/saldo_cuti"
                        android:textSize="14sp"
                        android:fontFamily="@font/leelawdb"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@id/employee_position"
                        app:layout_constraintTop_toBottomOf="@id/employee_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/value_leave_balance"
                        tools:text="@string/saldo_cuti"
                        android:fontFamily="@font/leelawdb"
                        android:textColor="#E12E46"
                        android:text="@{user_arg.leaveBalance+` HK`}"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/leave_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/senior"
                        android:text="@string/atasan"
                        android:textSize="14sp"
                        android:fontFamily="@font/leelawdb"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@id/leave_balance"
                        app:layout_constraintTop_toBottomOf="@id/leave_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/value_senior"
                        tools:text="@string/atasan"
                        android:fontFamily="@font/leelawdb"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:text="@{user_arg.senior}"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/senior"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/operation_head"
                        android:text="@string/operation_head"
                        android:textSize="14sp"
                        android:fontFamily="@font/leelawdb"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@id/senior"
                        app:layout_constraintTop_toBottomOf="@id/senior"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/value_operation_head"
                        tools:text="@string/operation_head"
                        android:textSize="12sp"
                        android:fontFamily="@font/leelawdb"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:text="@{user_arg.operationHead}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/operation_head"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <LinearLayout
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/change_button"
                            android:text="@string/ubah_pengguna"
                            android:layout_width="0dp"
                            app:cornerRadius="15dp"
                            android:textSize="13sp"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:fontFamily="@font/leelawad"
                            android:layout_height="wrap_content"/>
                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/delete_button"
                            android:layout_marginStart="8dp"
                            android:text="@string/hapus_pengguna"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            android:fontFamily="@font/leelawad"
                            app:cornerRadius="15dp"
                            android:layout_width="0dp"
                            android:backgroundTint="#E12E46"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
